objects/FscBot_TravelRequest__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TravelRequests</relationshipLabel>
        <relationshipName>TravelRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TravelRequests</relationshipLabel>
        <relationshipName>TravelRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialAccountNumber__c</fullName>
        <label>FinancialAccountNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>FromDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <description>The travel request will be inactive if the ToDate is past the current date</description>
        <formula>FromDate__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= ToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <label>ToDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travelling_Country__c</fullName>
        <label>Travelling Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Travel Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TravelRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>